--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,49 @@
+antix-cc-full-antix (0.4.2) unstable; urgency=low
+ 
+  * Updated translations
+
+ -- anticapitalista <antiX@operamail.com>  Sat, 30 May 2015 16:49:00 +0200
+
+
+antix-cc-full-antix (0.4.1) unstable; urgency=low
+ 
+  * CLI Apps tab added.
+  * More icons
+
+ -- anticapitalista <antiX@operamail.com>  Tue, 21 Apr 2015 15:02:00 +0200
+
+
+antix-cc-full-antix (0.4.0) unstable; urgency=low
+ 
+  * Code clean up
+  * gksu preset to use sudo in properties.
+
+ -- anticapitalista <antiX@operamail.com>  Fri, 03 Apr 2015 16:13:00 +0200
+
+
+antix-cc-full-antix (0.3.12) unstable; urgency=low
+ 
+  * Changes to live tag and back to using gksu
+  * Cleaned up code formatting.
+  * Replaced Edit Login Options.
+
+ -- anticapitalista <antiX@operamail.com>  Fri, 13 Mar 2015 21:47:00 +0200
+
+
+antix-cc-full-antix (0.3.11) unstable; urgency=low
+ 
+  * Replace hard-coded editor/terminal.
+
+ -- anticapitalista <antiX@operamail.com>  Tue, 17 Feb 2015 13:08:00 +0200
+
+
+antix-cc-full-antix (0.3.10) unstable; urgency=low
+ 
+  * Corrected .desktop icon path
+
+ -- anticapitalista <antiX@operamail.com>  Mon, 02 Jan 2015 18:27:00 +0200
+
+
 antix-cc-full-antix (0.3.9) unstable; urgency=low
  
   * New icon theme.
