--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+antix-cc-full-antix (0.4.3) unstable; urgency=low
+ 
+  * Fixed connectshares path
+
+ -- anticapitalista <antiX@operamail.com>  Thu, 04 Jun 2015 00:20:00 +0200
+
+
 antix-cc-full-antix (0.4.2) unstable; urgency=low
  
   * Updated translations
