--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+antix-cc-full-antix (0.4.4) unstable; urgency=low
+ 
+  * Removed CLI and Tools entries
+
+ -- anticapitalista <antiX@operamail.com>  Fri, 12 Jun 2015 19:45:00 +0200
+
+
 antix-cc-full-antix (0.4.3) unstable; urgency=low
  
   * Fixed connectshares path
