--- a/debian/changelog
+++ b/debian/changelog
@@ -1,273 +1,221 @@
-antix-cc-full-antix (0.4.4) unstable; urgency=low
- 
+antix-cc-base-antix (0.4.2) unstable; urgency=low
+
+  * Tidied up entries
+  * Updated translations
+
+ -- anticapitalista <antiX@operamail.com>  Sat, 27 Jun 2015 23:18:00 +0200
+
+
+antix-cc-base-antix (0.4.1) unstable; urgency=low
+
   * Removed CLI and Tools entries
 
  -- anticapitalista <antiX@operamail.com>  Fri, 12 Jun 2015 19:45:00 +0200
 
 
-antix-cc-full-antix (0.4.3) unstable; urgency=low
+antix-cc-base-antix (0.4.0) unstable; urgency=low
  
-  * Fixed connectshares path
+  * Changes to cater for antiX-15
 
- -- anticapitalista <antiX@operamail.com>  Thu, 04 Jun 2015 00:20:00 +0200
-
-
-antix-cc-full-antix (0.4.2) unstable; urgency=low
- 
-  * Updated translations
-
- -- anticapitalista <antiX@operamail.com>  Sat, 30 May 2015 16:49:00 +0200
+ -- anticapitalista <antiX@operamail.com>  Sun, 31 May 2015 12:08:00 +0200
 
 
-antix-cc-full-antix (0.4.1) unstable; urgency=low
- 
-  * CLI Apps tab added.
-  * More icons
-
- -- anticapitalista <antiX@operamail.com>  Tue, 21 Apr 2015 15:02:00 +0200
-
-
-antix-cc-full-antix (0.4.0) unstable; urgency=low
- 
-  * Code clean up
-  * gksu preset to use sudo in properties.
-
- -- anticapitalista <antiX@operamail.com>  Fri, 03 Apr 2015 16:13:00 +0200
-
-
-antix-cc-full-antix (0.3.12) unstable; urgency=low
- 
-  * Changes to live tag and back to using gksu
-  * Cleaned up code formatting.
-  * Replaced Edit Login Options.
-
- -- anticapitalista <antiX@operamail.com>  Fri, 13 Mar 2015 21:47:00 +0200
-
-
-antix-cc-full-antix (0.3.11) unstable; urgency=low
- 
-  * Replace hard-coded editor/terminal.
-
- -- anticapitalista <antiX@operamail.com>  Tue, 17 Feb 2015 13:08:00 +0200
-
-
-antix-cc-full-antix (0.3.10) unstable; urgency=low
+antix-cc-base-antix (0.3.9) unstable; urgency=low
  
   * Corrected .desktop icon path
 
- -- anticapitalista <antiX@operamail.com>  Mon, 02 Jan 2015 18:27:00 +0200
+ -- anticapitalista <antiX@operamail.com>  Mon, 02 Jan 2015 18:25:00 +0200
 
 
-antix-cc-full-antix (0.3.9) unstable; urgency=low
+antix-cc-base-antix (0.3.8) unstable; urgency=low
  
-  * New icon theme.
+  * New icon theme
 
- -- anticapitalista <antiX@operamail.com>  Sat, 27 Dec 2014 14:22:00 +0200
-
-
-antix-cc-full-antix (0.3.8) unstable; urgency=low
- 
-  * Added desktop-configuration session buttons.
-
- -- anticapitalista <antiX@operamail.com>  Sat, 15 Nov 2014 21:20:00 +0200
+ -- anticapitalista <antiX@operamail.com>  Sat, 27 Dec 2014 14:17:00 +0200
 
 
-antix-cc-full-antix (0.3.7.1) unstable; urgency=low
- 
-  * Preparation for release.
-
- -- anticapitalista <antiX@operamail.com>  Sat, 26 Oct 2013 18:15:00 +0200
-
-
-antix-cc-full-antix (0.3.7) unstable; urgency=low
+antix-cc-base-antix (0.3.7) unstable; urgency=low
  
   * Using dpkg-buildpackage.
   * .desktop file a no show.
-  * Added set-screen-blanking.
-  * Added Test Sound button.
-  * xz compressed deb.
+  * Re-arranged position of some icons to match antix-cc-full.
 
- -- anticapitalista <antiX@operamail.com>  Thu, 17 October 2013 19:55:00 +0200
+ -- anticapitalista <antiX@operamail.com>  Fri, 01 November 2013 13:30:00 +0200
 
-antix-cc-full-antix (0.3.6) unstable; urgency=low
+
+antix-cc-base-antix (0.3.6) unstable; urgency=low
  
   * Added some extra icons.
 
  -- anticapitalista <antiX@operamail.com>  Sun, 16 june 2013 14:15:00 +0200
 
 
-antix-cc-full-antix (0.3.5) unstable; urgency=low
+antix-cc-base-antix (0.3.5) unstable; urgency=low
  
-  * Added Arabic and Swedish to locales.
+  * Changed ownership to root:root.
 
- -- anticapitalista <antiX@operamail.com>  Sun, 26 May 2013 14:20:00 +0200
+ -- anticapitalista <antiX@operamail.com>  Wed, 05 June 2013 23:10:00 +0200
 
 
-antix-cc-full-antix (0.3.4) unstable; urgency=low
+antix-cc-base-antix (0.3.4) unstable; urgency=low
  
   * Using x-terminal-emulator.
 
  -- anticapitalista <antiX@operamail.com>  Sun, 12 May 2013 12:40:00 +0200
 
 
-antix-cc-full-antix (0.3.3) unstable; urgency=low
+antix-cc-base-antix (0.3.3) unstable; urgency=low
  
-  * Changes to cater for live-usb-gui-antix.
+  * Change depends to cater for live-usb-gui-antix.
 
  -- anticapitalista <antiX@operamail.com>  Wed, 06 March 2013 23:40:00 +0200
 
 
-antix-cc-full-antix (0.3.2) unstable; urgency=low
+antix-cc-base-antix (0.3.2) unstable; urgency=low
  
   * arandr replaces grandr.
 
  -- anticapitalista <antiX@operamail.com>  Fri, 15 February 2013 00:10:00 +0200
 
 
-antix-cc-full-antix (0.3.1.2) unstable; urgency=low
+antix-cc-base-antix (0.3.1) unstable; urgency=low
  
   * Removed set cursors as it is in lxappearance.
 
  -- anticapitalista <antiX@operamail.com>  Sun, 02 December 2012 22:10:00 +0200
 
 
-antix-cc-full-antix (0.3.1.1) unstable; urgency=low
-
-  * Fixed bug in antiXcc.
-
- -- anticapitalista <antiX@operamail.com>  Tue, 30 October 2012 18:40:00 +0200
-
-
-antix-cc-full-antix (0.3.1) unstable; urgency=low
-
+antix-cc-base-antix (0.3.0) unstable; urgency=low
+ 
   * New release.
   * jwm menu link fixed.
 
  -- anticapitalista <antiX@operamail.com>  Sat, 27 October 2012 22:50:00 +0200
 
 
-antix-cc-full-antix (0.3.0) unstable; urgency=low
+antix-cc-base-antix (0.2.3) unstable; urgency=low
  
-  * Using gksu and ktsuss.
+  * re-included gksu as ktsuss is limited re gparted swap.
 
- -- anticapitalista <antiX@operamail.com>  Fri, 26 October 2012 14:35:00 +0200
+ -- anticapitalista <antiX@operamail.com>  Fri, 26 October 2012 14:20:00 +0200
 
 
-antix-cc-full-antix (0.2.1) unstable; urgency=low
+antix-cc-base-antix (0.2.2) unstable; urgency=low
+ 
+  * ktsuss replaces gksu.
+
+ -- anticapitalista <antiX@operamail.com>  Sun, 14 October 2012 15:20:00 +0200
+
+
+antix-cc-base-antix (0.2.1) unstable; urgency=low
  
   * Bug fixes.
-  * Removed close button.
+  * Removed 'close' button.
 
- -- anticapitalista <antiX@operamail.com>  Sat, 13 October 2012 15:05:00 +0200
+ -- anticapitalista <antiX@operamail.com>  Sat, 13 October 2012 15:15:00 +0200
 
 
-antix-cc-full-antix (0.2.0) unstable; urgency=low
+antix-cc-base-antix (0.2.0) unstable; urgency=low
  
-  * Replaced gksu with ktsuss.
+  * New icon set.
   * Function for icons.
 
- -- anticapitalista <antiX@operamail.com>  Sun, 23 September 2012 13:55:00 +0200
+ -- anticapitalista <antiX@operamail.com>  Sat, 06 October 2012 13:55:00 +0200
 
 
-antix-cc-full-antix (0.1.5.1) unstable; urgency=low
+antix-cc-base-antix (0.1.4.1) unstable; urgency=low
  
   * Fixed ownership bug.
 
  -- anticapitalista <antiX@operamail.com>  Sun, 26 August 2012 15:40:00 +0200
 
 
-antix-cc-full-antix (0.1.5.0) unstable; urgency=low 
+antix-cc-base-antix (0.1.4.0) unstable; urgency=low 
  
   * Removed defunct alsaconf.
 
- -- anticapitalista <antiX@operamail.com> Fri, 03 August J2012 17:40:00 +0200
+ -- anticapitalista <antiX@operamail.com> Fri, 03 August 2012 17:40:00 +0200
 
 
-antix-cc-full-antix (0.1.4.9) unstable; urgency=low 
+antix-cc-base-antix (0.1.3.9) unstable; urgency=low 
  
   * Added copyright notice.
 
  -- anticapitalista <antiX@operamail.com> Mon, 16 July 2012 15:30:00 +0200
 
 
-antix-cc-full-antix (0.1.4.8) unstable; urgency=low 
+antix-cc-base-antix (0.1.3.8) unstable; urgency=low 
  
-  * Altered for /bin/bash..
+  * Altered for /bin/bash.
 
  -- anticapitalista <antiX@operamail.com>  Tues, 10 July 2012 18:30:00 +0200
 
 
-antix-cc-full-antix (0.1.4.7) unstable; urgency=low 
+antix-cc-base-antix (0.1.3.7) unstable; urgency=low 
+ 
+  * Added gnome-ppp.
+  * Latest .mo files.
+
+ -- anticapitalista <antiX@operamail.com>  Sat, 30 June 2012 16:30:00 +0200
+
+
+antix-cc-base-antix (0.1.3.6) unstable; urgency=low 
  
   * Improved Dutch localisation.
 
  -- anticapitalista <antiX@operamail.com>  Mon, 21 May 2012 18:30:00 +0200
 
 
-antix-cc-full-antix (0.1.4.6) unstable; urgency=low 
+antix-cc-base-antix (0.1.3.5) unstable; urgency=low 
  
   * Improved localisation.
 
  -- anticapitalista <antiX@operamail.com>  Mon, 30 April 2012 18:30:00 +0200
 
 
-antix-cc-full-antix (0.1.4.5) unstable; urgency=low 
+antix-cc-base-antix (0.1.3.4) unstable; urgency=low 
  
   * Remastercc.sh needs bash.
 
  -- anticapitalista <antiX@operamail.com>  Wed, 25 April 2012 18:30:00 +0200
 
 
-antix-cc-full-antix (0.1.4.4) unstable; urgency=low 
+antix-cc-base-antix (0.1.3.3) unstable; urgency=low 
  
   * mountbox-antix to open as user not root.
 
  -- anticapitalista <antiX@operamail.com>  Wed, 18 April 2012 18:30:00 +0200
 
 
-antix-cc-full-antix (0.1.4.3) unstable; urgency=low 
+antix-cc-base-antix (0.1.3.2) unstable; urgency=low 
  
-  * Link to /etc/apt/sources.d folder.
+  * link to /etc/apt/sources.d directory.
 
  -- anticapitalista <antiX@operamail.com>  Thu, 05 April 2012 00:30:00 +0200
 
 
-antix-cc-full-antix (0.1.4.2) unstable; urgency=low 
- 
-  * Removed various dependencies.
-
- -- anticapitalista <antiX@operamail.com>  Fri, 02 April 2012 22:30:00 +0200
-
-
-antix-cc-full-antix (0.1.4.1) unstable; urgency=low 
+antix-cc-base-antix (0.1.3.1) unstable; urgency=low 
  
   * Removed manage-slim-antix dependency.
 
- -- anticapitalista <antiX@operamail.com>  Fri, 02 April 2012 17:30:00 +0200
+ -- anticapitalista <antiX@operamail.com>  Mon, 02 April 2012 17:30:00 +0200
 
 
-antix-cc-full-antix (0.1.4) unstable; urgency=low 
+antix-cc-base-antix (0.1.3) unstable; urgency=low 
  
   * Link to persist-makefs not fs-make.
 
- -- anticapitalista <antiX@operamail.com>  Fri, 02 April 2012 12:30:00 +0200
+ -- anticapitalista <antiX@operamail.com>  Mon, 02 April 2012 12:30:00 +0200
 
 
-antix-cc-full-antix (0.1.3) unstable; urgency=low 
+antix-cc-base-antix (0.1.2) unstable; urgency=low 
  
   * Added Live tab for remastering and persistence.
 
  -- anticapitalista <antiX@operamail.com>  Fri, 09 March 2012 12:30:00 +0200
 
 
-antix-cc-full-antix (0.1.2) unstable; urgency=low 
- 
-  * Fixed icon for wicd.
-
- -- anticapitalista <antiX@operamail.com>  Mon, 20 February 2012 18:10:00 +0200
-
-
-antix-cc-full-antix (0.1.1) unstable; urgency=low 
+antix-cc-base-antix (0.1.1) unstable; urgency=low 
  
   * Initial Release.
 
