--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,31 @@
+antix-cc-full-antix (0.4.10+nmu1) unstable; urgency=medium
+
+  * Live tab grep for overlayfs not aufs 
+
+ -- anticapitalista <antix@operamail.com>  Thu, 24 Mar 2016 14:22:15 +0200
+
+antix-cc-full-antix (0.4.10) unstable; urgency=low
+ 
+  * Fixed broken Time and Date
+
+ -- anticapitalista <antiX@operamail.com>  Wed, 03 Feb 2016 16:30:00 +0200
+
+
+antix-cc-full-antix (0.4.9) unstable; urgency=low
+ 
+  * Replaced mouse-cc-antix with ds-mouse-antix
+
+ -- anticapitalista <antiX@operamail.com>  Wed, 27 Jan 2016 15:42:00 +0200
+
+
+antix-cc-full-antix (0.4.8) unstable; urgency=low
+ 
+  * Fixed Edit Bootloader menu bug (needs "")
+  * Changed su -c (root) to sudo
+
+ -- anticapitalista <antiX@operamail.com>  Fri, 15 Jan 2016 17:38:00 +0200
+
+
 antix-cc-full-antix (0.4.7) unstable; urgency=low
  
   * Updated Catalan, German, Greek, Spanish, Italian and Swedish
