--- a/debian/install
+++ b/debian/install
@@ -1,6 +1,4 @@
-antiXCC.desktop     /usr/share/applications/antix
-locale/*	    /usr/share/locale
-changelog.gz        /usr/share/doc/antix-cc-full-antix
-copyright           /usr/share/doc/antix-cc-full-antix
-icons/*             /usr/share/icons
-antixcc.sh          /usr/local/bin
+antiXCC.desktop     usr/share/applications/antix
+locale/*	    usr/share/locale
+icons/*             usr/share/icons
+antixcc.sh          usr/local/bin
