--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+antix-cc-full-antix (0.4.12) unstable; urgency=medium
+
+  * Removed Global Desktop-Session 
+
+ -- anticapitalista <antix@operamail.com>  Fri, 29 Apr 2016 20:15:41 +0300
+
 antix-cc-full-antix (0.4.11) unstable; urgency=medium
 
   * Fix link to show Remaster when running live - use /etc/ 
