--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+control-centre-antix (0.4.19) unreleased; urgency=medium
+
+  * Added Catalan 
+
+ -- anticapitalista <antix@operamail.com>  Mon, 06 Jun 2016 11:46:06 +0300
+
 control-centre-antix (0.4.18) unstable; urgency=medium
 
   * Added automount option 
