--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+control-centre-antix (0.4.20) unstable; urgency=medium
+
+  * alsamixer-equalizer appears only if present
+
+ -- anticapitalista <antix@operamail.com>  Wed, 22 Jun 2016 00:04:33 +0300
+
 control-centre-antix (0.4.19) unreleased; urgency=medium
 
   * Added Catalan 
